# 42_Piscine

./: .check.asm.swp  .gitignore  CMakeLists.txt  Simple.c  check.asm  max_subarray_sum.c  vowels.c
BSQ/: BSQ.h  auteur  main.c  makefile  test3.txt  testing.c
BSQ/bsq_solver/: bsq_solver.c  bsq_solver.h
BSQ/ft/: ft.c  ft.h  split.c  usable_functions.c
BSQ/map_generator/: map_generator.pl
BSQ/read_data/: CMD_read.c  create_data_array.c  define_type_of_input.c  error_tracking.c  read_data.c  read_data.h  read_data_CMDline.c  read_data_FILES.c
BSQ/tests/: test.txt  test2.txt  test4.txt  test5.txt  test6.txt
Codewars/: 1.c  Simple.c  best_travel.c  dice_throw.c  max_subarray_sum.c  narcissistic_number.c  pangram.c  range_extraction.c  vowels.c  zeros_of_factorial.c
day02/ex00/: ft__print__alphabet.c
day02/ex01/: ft__print__reverse__alphabet.c
day02/ex02/: ft__print__numbers.c
day02/ex03/: ft__print__reverse__alphabet.c  ft_isnegative.c
day02/ex04/: ft__print__comb.c
day02/ex05/: ft_print_comb2.c
day02/ex06/: ft_putnbr.c
day02/ex07/: ft_print_combn.c
day03/ex03/: ft_div_mod.c
day03/ex04/: ft_ultimate_div_mod.c
day03/ex05/: ft_putstr.c
day03/ex06/: ft_strlen.c
day03/ex07/: ft_strrev.c
day03/ex08/: ft_atoi.c
day03/ex09/: ft_sort_integer_table.c
day04/ex00/: ft_iterative_factorial.c
day04/ex01/: ft_recursive_factorial.c
day04/ex02/: ft_iterative_power.c
day04/ex03/: ft_recursive_power.c
day04/ex04/: ft_fibonacci.c
day04/ex05/: ft_sqrt.c
day04/ex06/: ft_is_prime.c
day04/ex07/: ft_find_next_prime.c
day04/ex08/: ft_eight_queens_puzzle.c
day05/ex00/: ft_putstr.c
day05/ex01/: ft_putnbr.c
day05/ex02/: ft_atoi.c
day05/ex03/: ft_strcpy.c
day05/ex04/: ft_strncpy.c
day05/ex05/: ft_strstr.c
day05/ex06/: ft_strcmp.c
day05/ex07/: ft_strncmp.c
day05/ex09/: ft_strlowcase.c
day05/ex10/: ft_strcapitalize.c
day05/ex13/: ft_str_is_lowercase.c
day05/ex16/: ft_strcat.c
day06/: test.c
day06/ex02/: a.out  (+1 more)
day11/: ft_list.h  printfromhead.c  printfromtail.c
day13/: ft_btree.h  main.c  makefile
project01/: proj01.h
(+148 files in other folders)
